# utaustin-wbc

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  behavior_test_tasks.yaml  hello_goodbye_behaviors.yaml  hello_goodbye_tasks.yaml  jlimit_test.yaml  m3_behavior_test.cpp  m3_jlimit_test.cpp  m3_servo.cpp  m3_torque_shm.py  m3_tp_test.cpp  ori_test.yaml  tasks.yaml  tp_test.yaml
config/: float.yaml  jtest.yaml  ori_with_float.yml
m3_apps/: CMakeLists.txt  behavior_test_behaviors.yaml  jlimit_fallback.yaml  jlimit_test.yaml  m3_tp_test.cpp  rt_util.cpp  servo.cpp  torque_test.cpp  tp_test.yaml
m3_apps/attic/: hello_goodbye_tasks.yaml  m3_servo.cpp
opspace/: CMakeLists.txt  Controller.cpp  Controller.hpp  Task.hpp  TaskFactory.cpp  TaskFactory.cpp~  TaskFactory.hpp  TaskFactory.hpp~  TypeIOTGCursor.cpp  TypeIOTGCursor.hpp  task_library.cpp  task_library.hpp  testTask.cpp  testTaskFactory.cpp
opspace/include/opspace/: ControllerNG.hpp  Factory.hpp  HelloGoodbyeSkill.hpp  task_library.hpp
opspace/src/: ControllerNG.cpp  Factory.cpp  HelloGoodbyeSkill.cpp  Task.cpp  controller_library.cpp  parse_yaml.cpp  testFactory.cpp  testTask.cpp
reflexxes_otg/: CMakeLists.txt
scripts/: wg-2011-03-04--eeori-float.sh  wg-2011-03-04--eepos-safedetect.sh  wg-2011-03-04--hellobyebye.sh
stanford_wbc/: CMakeLists.txt
stanford_wbc/opspace/: CMakeLists.txt
tutorials/: CMakeLists.txt  tut00_test.cpp  tut01_joint_coupling.cpp  tut02_jtask.cpp  tut03_gravity_compensation.cpp  tut04_inertia_compensation.cpp  tut05_eepos.cpp  tut05_eepos_no_posture.cpp  tut05_eepos_simplistic.cpp  tut06_eepos.cpp  tut1_coupling.cpp  tutmain.cpp  tutrob.xml  tutsim.cpp  tutsim.hpp
uta_opspace/: CMakeLists.txt
util/: CMakeLists.txt
